[gd_scene load_steps=4 format=3 uid="uid://cmuvgb5jadix3"]

[ext_resource type="Texture2D" uid="uid://bjur0bw7suewa" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/Mini UI/Dialog_Box(16 x 16).png" id="1_81oow"]
[ext_resource type="Script" path="res://scripts/dialog_box.gd" id="1_akyjt"]
[ext_resource type="FontFile" uid="uid://cpn3kcsxkx22i" path="res://assets/fonts/RevMiniPixel.ttf" id="2_uu0v4"]

[node name="dialog_box" type="MarginContainer"]
offset_right = 44.0
offset_bottom = 26.0
script = ExtResource("1_akyjt")

[node name="background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_81oow")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="label_margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="text_label" type="Label" parent="label_margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uu0v4")
theme_override_font_sizes/font_size = 8
vertical_alignment = 1

[node name="letter_time_display" type="Timer" parent="."]

[connection signal="timeout" from="letter_time_display" to="." method="_on_letter_time_display_timeout"]
